--- a/16 Marzo. HTML 2/pagina1.html
+++ b/16 Marzo. HTML 2/pagina1.html
@@ -12,10 +12,9 @@
 
 <header>
     <!-- Soy un comentario. Aquí va el header -->
-    <h1 style="background-color: rgb(75, 0, 128)">Estoy en el header</h1>
+    <h1>Estoy en el header</h1>
     <p>Esto en un párrafo</p>
-    <img style="height: 500px; width: 500px;" src="../fotos/foto.webp"
-        alt="People in CodeOp">
+    <img style="height: 500px; width: 500px;" src="../fotos/foto.webp" alt="People in CodeOp">
     <br>
     <a style="font-size: 20px" target="_blank" href="https://codeop.tech/">Visit CodeOp</a>
 </header>
@@ -23,20 +22,13 @@
 <body>
     <h2>Estoy en el body</h2>
     <div style="background-color: yellowgreen">
-        <p>Hola estoy en la caja 1</p>
-    </div>
-    <div style="background-color: blueviolet;">
-        <p>Hola estoy en la caja 2</p>
-    </div>
-    <div>
-        <p>Hola estoy en la caja 3</p>
-    </div>
-    <div style="background-color:brown">
-        <p>Hola estoy en la caja 4</p>
+        <a href="#pie-pagina">
+            Ves a la siguiente página
+        </a>
     </div>
 </body>
 
-<footer>
+<footer id="pie-pagina">
     <h5>Aquí es el footer</h5>
 </footer>
 
